Fixed spacing issue between first sub obj and second one

--- a/frontend/css/theme.css
+++ b/frontend/css/theme.css
@@ -35,21 +35,24 @@
 		
 		#map-canvas > .container{ position: absolute;}
 		#map-canvas .container {text-align: left; width: 100px; }
-		#map-canvas .container > div { text-align: center; width: 100px;}
-		#map-canvas .container > ul { display: none; margin-left: 100px;}
+		#map-canvas .container > div { text-align: center; width: 100px; }
+		#map-canvas .container > ul { display: none; margin-left: 115px; }
 		
 		#map-canvas .container.hover { width: 200px; text-align: left; }
-		#map-canvas .container.hover > div { float: left; }
+		#map-canvas .container.hover > div { float: left; clear: both; }
 		#map-canvas .container.hover ul { display: block; }
 		
 		#map-canvas .mapsystem {width: 30px; height: 30px; text-align: center; }
+		#map-canvas .starsystem { clear: both; }
 		#map-canvas .starsystem img {width: 50px; height: 50px;}
-		#map-canvas .name {width: 100px; display: block; position: relative; top: -20px; font-size: 15px; color: white; margin: 0; padding: 0; cursor: default; line-height:95%;}
+		#map-canvas .name {width: 100px; position: relative; top: -20px; font-size: 15px; color: white; margin: 0; padding: 0; 
+								cursor: default; line-height:95%; display: block;}
 		#map-canvas .fleet img {width: 30px; }	
 		#map-canvas .icon { display: none; }
 		
-		ul.tree-list { margin: 2px 0 2px 0; list-style-type: none; }
-        ul.tree-list ul { margin: 2px 0 2px 0px; list-style-type: none; }
+		ul .container { float: right; }
+		ul.tree-list { margin: 2px 0 2px 0px; list-style-type: none; }
+        ul.tree-list ul { margin: 2px 0 2px 0; list-style-type: none; }
         ul.tree-list li { margin: 0; padding: 0 0 1px 20px; line-height: 16px; }
         
 		#loading-panel { width: 250px; height: 50px; background-image: url('../images/info-panel.png'); background-position: -50px -50px; background-repeat: no-repeat;
